# TimeSeries_Analysis_Project

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: Timeseri_analysis.ipynb  analysis.ipynb
src/analyzer/: __main__.py  analyzer.py  preprocessor.py  visualizer.py
src/analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
